reintroduce lists for condition creation to allow exception handling for duplicate variable levels